# list-engine

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
maps/: bots.txt  de.lng  default_savegame.txt  example.map  hafen_list.map  mini_island.map  station.map
src/: helper_botActions.c  helper_botParser.c  helper_draw.c  helper_mapParser.c  helper_parser.c  helper_savegame.c  helper_tokenizer.c  helpers.h  init_game.c  init_sdl.c  lists.c  main.c  shared.h  state_loading.c  state_menu.c  state_playing.c  state_saving.c
